# recomptracker

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  Taskfile.yml  bf-plot  changes-summary-fix  core.py  core_BACKUP_45960.py  core_BASE_45960.py  core_LOCAL_45960.py  core_REMOTE_45960.py  dexa-scan-table  example_config.json  example_file.xlsx  example_scenario_analysis.py  feature-prompt  fix-tests  fix-url-reloading  forecast_api.py  goal-bug  goal-row-bug  mc_forecast.py  merge-branch.sh  move-tests  new-branch.sh  new-feature.sh  novice_goal_test_config.json  overall-changes  phase_planning.py  plan_1_webapp_load_example_button.md  plan_2_goal_calculations_structure.md  plan_3_mixed_explicit_suggested.md  plan_4_suggested_almi_goal.md  plan_5_suggested_ffmi_goal.md  precalculate_curves.py  pyproject.toml  realistic-profiles  reddit_post.md  (+27 more)
.github/workflows/: ci.yml
docs/: README.md  phase_planning_research.md  t-score-methodology.md  v1-url-state-schema.json  v1-url-state-spec.md  v1_schema_validator.py
goal-simulations/: MF-bulking-calc.md  MF-cutting-calculator.md  fan-implementation-ideas.md  mf_thinking.md  novice-recomp.md  p-ratio.md  prd.md  stronger-by-science-p-ratio.md
goal-simulations/plans/: 01-monte-carlo-engine.md  02-phase-planning-system.md  03-forecast-api.md  04-quick-mode-visualization.md  05-quick-mode-ui.md  06-advanced-mode-visualization.md  07-advanced-mode-ui.md
goal-simulations/prd-context/: MF-bulk-or-cut.md  chatgpt_mf_thinking.md  deep-resarch-recomp.md  monte-carlo-ideas.md
goal-simulations/prompts/: plan-out-feature
static/: webapp.css
tests/: test_forecast_api.py
tests/integration/: run_optional_bf_tests.py  test_20_scans.py  test_auto_update.py  test_data_editor.py  test_integration_simple.py  test_url_auto_analysis_fix.py  test_url_loading_bug_reproduction.py  test_url_sharing.py  test_url_state_loading_integration.py  test_v1_url_state_compatibility.py  test_webapp_integration.py
tests/unit/: test_dynamic_training_progression.py  test_mc_forecast.py  test_phase_planning.py  test_realistic_goal_calculations.py  test_weight_constraints.py  test_zscore_calculations.py
