[project]
name = "recomptracker"
version = "0.1.0"
description = "Operationalizes Peter Attia's Medicine 3.0 approach to body composition by calculating Z-scores and percentiles for ALMI/FFMI metrics using LMS reference values, enabling data-driven pursuit of elite percentiles for longevity"
authors = [
    {name = "Ben Mabey", email = "ben@benmabey.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "scipy>=1.9.0",
    "xlrd>=2.0.0",
    "jsonschema>=4.0.0",
    "matplotlib>=3.5.0",
    "streamlit>=1.28.0",
    "tabulate>=0.9.0",
    "plotly>=5.0.0",
    "watchdog>=2.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = [
    "*_BACKUP_*.py",
    "*_BASE_*.py", 
    "*_LOCAL_*.py",
    "*_REMOTE_*.py",
    "bf-plot",
    "changes-summary-fix",
    "dexa-scan-table",
    "feature-prompt",
    "fix-tests",
    "fix-url-reloading",
    "goal-bug",
    "goal-row-bug",
    "move-tests",
    "overall-changes",
    "realistic-profiles",
    "scan-table-size",
    "tiny-url",
    "training-level-flash",
    "update-chnages-table",
    "v1-api-urls",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # Line too long (let formatter handle this)
    "E722",  # Bare except (acceptable in fallback code)
    "B007",  # Loop variable not used (pandas iterrows pattern)
    "B904",  # Exception chaining (acceptable in existing code)
    "B017",  # Asserting on Exception (acceptable in tests)
    "F401",  # Unused import (plotly.express for optional functionality)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true